--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-hook-form-resolvers": "^0.0.1",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
